2014-07-02  Florian Weimer  <fweimer@redhat.com>

	* locale/setlocale.c (setlocale): Use strdup for allocating
	composite name copy.

2014-05-26  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16878]
	* nscd/netgroupcache.c (addgetnetgrentX): Look for
	NSS_STATUS_TRYAGAIN to indicate insufficient buffer space.
	* nscd/nss_files/files-netgrp.c (_nss_netgroup_parseline): Use
	NSS_STATUS_TRYAGAIN to indicate insufficient buffer space.

2014-03-12  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16695]
	* nscd/netgroupcache.c (addgetnetgrentX): Factor in space for
	key in the buffer.

2014-06-20  Maciej W. Rozycki  <macro@codesourcery.com>

	[BZ #16046]
	* elf/tst-dl-iter-static.c: New file.
	* elf/Makefile (tests-static): Add tst-dl-iter-static.

2014-06-20  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #17069]
	* posix/regcomp.c (parse_reg_exp): Deallocate partially
	constructed tree before returning error.
	* posix/bug-regexp36.c: Expand test case.

2014-06-19  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #17069]
	* posix/regcomp.c (parse_expression): Deallocate partially
	constructed tree before returning error.
	* posix/Makefile.c (tests): Add bug-regex36.
	(generated): Add bug-regex36.mtrace.
	(tests-special): Add $(objpfx)bug-regex36-mem.out
	(bug-regex36-ENV): New variable.
	($(objpfx)bug-regex36-mem.out): New rule.
	* posix/bug-regex36.c: New file.

2014-06-03  Andreas Schwab  <schwab@suse.de>

	[BZ #15946]
	* resolv/res_send.c (send_dg): Reload file descriptor after
	calling reopen.

2014-02-18  Andreas Schwab  <schwab@suse.de>

	[BZ #16574]
	* resolv/res_send.c (send_vc): Add parameter ansp2_malloced.
	Store non-zero if the second buffer was newly allocated.
	(send_dg): Likewise.
	(__libc_res_nsend): Add parameter ansp2_malloced and pass it down
	to send_vc and send_dg.
	(res_nsend): Pass NULL for ansp2_malloced.
	* resolv/res_query.c (__libc_res_nquery): Add parameter
	answerp2_malloced and pass it down to __libc_res_nsend.